# FerroLang

./: CMakeLists.txt  README.md
examples/: test.fl  test.fs  test_header.fh
src/: interpreter.c
src/FL/: datastructures.c  datastructures.h  filemanager.c  filemanager.h  parser.c  parser.h  textstyle.h  tokenizer.c  tokenizer.h
src/interpreter/: interpreter.c  variables.h
